text.txt
lin@lin-VirtualBox:~/Downloads/ns-allinone-3.35/ns-3.35$ ./waf build
Waf: Entering directory `/home/lin/Downloads/ns-allinone-3.35/ns-3.35/build'
[2714/2977] Compiling contrib/leo/examples/leo-lab4.cc
../contrib/leo/examples/leo-lab4.cc: In function ‘void EchoRx(std::string, ns3::Ptr<const ns3::Packet>, const ns3::TcpHeader&, ns3::Ptr<const ns3::TcpSocketBase>)’:
../contrib/leo/examples/leo-lab4.cc:105:17: error: ‘const class ns3::TcpSocketBase’ has no member named ‘GetTotalRx’
  105 |     if (socket->GetTotalRx() >= 125000) { // Current GS transmission to this SAT is complete
      |                 ^~~~~~~~~~
In file included from ./ns3/log.h:32,
                 from ./ns3/fatal-error.h:29,
                 from ./ns3/abort.h:24,
                 from ./ns3/core-module.h:10,
                 from ../contrib/leo/examples/leo-lab4.cc:10:
../contrib/leo/examples/leo-lab4.cc:115:147: error: ‘const class ns3::TcpSocketBase’ has no member named ‘GetTotalRx’
  115 |         NS_LOG_INFO("GS " << gsId << " -> SAT " << satId << " transmission FINISHES at: " << gsRxEndTimes[currentPair] << "s. Bytes: " << socket->GetTotalRx());
      |                                                                                                                                                   ^~~~~~~~~~
./ns3/log-macros-enabled.h:197:24: note: in definition of macro ‘NS_LOG’
  197 |           std::clog << msg << std::endl;                        \
      |                        ^~~
../contrib/leo/examples/leo-lab4.cc:115:9: note: in expansion of macro ‘NS_LOG_INFO’
  115 |         NS_LOG_INFO("GS " << gsId << " -> SAT " << satId << " transmission FINISHES at: " << gsRxEndTimes[currentPair] << "s. Bytes: " << socket->GetTotalRx());
      |         ^~~~~~~~~~~

Waf: Leaving directory `/home/lin/Downloads/ns-allinone-3.35/ns-3.35/build'
Build failed
 -> task in 'leo-lab4' failed with exit status 1 (run with -v to display more information)
